create database seeder

--- a/.env
+++ b/.env
@@ -53,3 +53,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GATEWAY_URL=http://host.docker.internal:81
 
+GOONG_API_KEY=VWEykUxNr5f4DReznrCTAtui2DL8iuXXdjapLuJv
+
